--- a/.github/workflows/build_push_docker_images.yml
+++ b/.github/workflows/build_push_docker_images.yml
@@ -22,6 +22,30 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Build and push init_db image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker/python_init_db
+          file: ./docker/python_init_db/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/projet_reco_movies:python-init-db-latest
+
+      - name: Build and push build_features image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker/python_build_features
+          file: ./docker/python_build_features/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/projet_reco_movies:python-build-features-latest
+
+      - name: Build and push recover_data image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker/python_recover_data
+          file: ./docker/python_recover_data/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/projet_reco_movies:python-recover-data-latest
+
       - name: Build and push Api image
         uses: docker/build-push-action@v2
         with:
