--- a/kubernetes/persistent-volumes/airflow-local-raw-preprocess-folder-pv.yml
+++ b/kubernetes/persistent-volumes/airflow-local-raw-preprocess-folder-pv.yml
@@ -12,4 +12,4 @@ spec:
     namespace: airflow
     name: airflow-local-raw-preprocess-folder
   hostPath:
-    path: "/host/data/src/raw/silver/"
+    path: "/host/data/src/raw/silver/" # Vérifiez ce chemin
