--- a/kubernetes/persistent-volumes/airflow-local-raw-init-folder-pv.yml
+++ b/kubernetes/persistent-volumes/airflow-local-raw-init-folder-pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: airflow-local-raw-init-folder
+  name: airflow-local-raw-folder
 spec:
   storageClassName: local-path
   capacity:
@@ -10,6 +10,6 @@ spec:
     - ReadWriteOnce
   claimRef:
     namespace: airflow
-    name: airflow-local-raw-init-folder
+    name: airflow-local-raw-folder
   hostPath:
-    path: "/host/data/src/raw/bronze/"
+    path: "/host/data/raw/"
