--- a/docker/fastapi/requirements.txt
+++ b/docker/fastapi/requirements.txt
@@ -1,15 +1,17 @@
-fastapi
-uvicorn==0.22.0
-pydantic==1.10.4
-passlib==1.7.4
-python-jose==3.3.0
-psycopg2-binary==2.9.6
-python-dotenv==1.0.0
-prometheus-client
-prometheus-fastapi-instrumentator
-kubernetes
-numpy
-scipy
+fastapi[standard]>=0.113.0,<0.114.0
+pydantic>=2.7.0,<3.0.0
+uvicorn
 pandas
+numpy>=1.21.0,<2.0.0
+scipy
 rapidfuzz
+psycopg2-binary
+python-dotenv
+requests
+prometheus-client
 scikit-surprise
+kubernetes
+prometheus-fastapi-instrumentator
+passlib[bcrypt]
+python-jose
+scikit-learn
