--- a/kubernetes/persistent-volumes/mlflow-storage-pvc.yml
+++ b/kubernetes/persistent-volumes/mlflow-storage-pvc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: models-storage-pvc
+  name: models-mlflow-pvc
   namespace: airflow
 spec:
   accessModes:
