--- a/kubernetes/deployments/fastapi-deployment.yml
+++ b/kubernetes/deployments/fastapi-deployment.yml
@@ -18,17 +18,17 @@ spec:
           image: antoinepela/projet_reco_movies:fastapi-latest
           imagePullPolicy: Always # Force Kubernetes à toujours tirer l'image
           env:
-            - name: AIRFLOW_POSTGRESQL_SERVICE_HOST
-              value: "airflow-postgresql.airflow.svc.cluster.local"
-            - name: DATABASE
-              value: "postgres"
-            - name: USER
-              value: "postgres"
-            - name: PASSWORD
+            - name: POSTGRES_HOST
+              value: "my-api-postgres.airflow.svc.cluster.local"
+            - name: POSTGRES_DB # Nom de la base de données à créer.
+              value: "my-api-database"
+            - name: POSTGRES_USER # Nom d'utilisateur pour PostgreSQL.
+              value: "antoine"
+            - name: POSTGRES_PASSWORD # Mot de passe pour l'utilisateur.
               valueFrom:
                 secretKeyRef:
                   name: api-secrets
-                  key: PASSWORD
+                  key: POSTGRES_PASSWORD
             - name: SECRET_KEY
               valueFrom:
                 secretKeyRef:
