--- a/kubernetes/persistent-volumes/prometheus-pvc.yml
+++ b/kubernetes/persistent-volumes/prometheus-pvc.yml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prometheus-logs
-  namespace: reco-movies
+  name: prometheus-pvc
+  namespace: api
 spec:
   accessModes:
     - ReadWriteOnce
