--- a/kubernetes/secrets/my-api-postgres-secrets.yml
+++ b/kubernetes/secrets/my-api-postgres-secrets.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-api-postgres-secret
+  name: my-api-postgres-secrets
   namespace: airflow
 type: Opaque
 data:
