--- a/kubernetes/services/my-api-postgres-service.yml
+++ b/kubernetes/services/my-api-postgres-service.yml
@@ -4,11 +4,10 @@ metadata:
   name: my-api-postgres
   namespace: airflow
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 5432 # Port sur lequel le service sera accessible.
       targetPort: 5432 # Port du conteneur PostgreSQL.
       protocol: TCP
-      nodePort: 30000 # Optionnel : spécifiez un port externe si vous utilisez NodePort.
   selector:
     app: my-api-postgres
