--- a/tests/requirements-test.txt
+++ b/tests/requirements-test.txt
@@ -28,7 +28,7 @@ kubernetes
 apache-airflow
 beautifulsoup4==4.12.3
 python-dotenv==1.0.1
-surprise
+scikit-surprise
 mlflow
 streamlit
 prometheus_client
