--- a/kubernetes/persistent-volumes/my-api-postgres-pv.yml
+++ b/kubernetes/persistent-volumes/my-api-postgres-pv.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: my-api-postgres-pv
+  namespace: airflow
 spec:
   storageClassName: local-path
   capacity:
@@ -12,4 +13,4 @@ spec:
     namespace: airflow
     name: my-api-postgres-pvc
   hostPath:
-    path: "/host/data/backup_db/"
+    path: "/host/data/postgres/"
