--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8
           pip install -r tests/requirements-test.txt
+          pip install "sqlalchemy==1.4"
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
