--- a/kubernetes/persistent-volumes/my-db-backup-pv.yml
+++ b/kubernetes/persistent-volumes/my-db-backup-pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: my-api-postgres
+  name: my-db-backup
   namespace: airflow
 spec:
   storageClassName: local-path
@@ -11,6 +11,6 @@ spec:
     - ReadWriteOnce
   claimRef:
     namespace: airflow
-    name: my-api-postgres-pvc
+    name: my-db-backup
   hostPath:
-    path: "/host/data/db_data/"
+    path: "/host/data/backup_db"
