--- a/kubernetes/deployments/grafana-deployment.yml
+++ b/kubernetes/deployments/grafana-deployment.yml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 3000
           envFrom:
             - configMapRef:
-                name: grafana-datasources # Référence au ConfigMap créé ci-dessus.
+                name: grafana-datasources
           volumeMounts:
             - name: grafana-storage
               mountPath: /var/lib/grafana # Pour persister les données.
