--- a/kubernetes/secrets/api-secrets.yaml
+++ b/kubernetes/secrets/api-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: api
 type: Opaque
 data:
-  POSTGRES_PASSWORD: cGFzc3dvcmQ=
+  POSTGRES_PASSWORD: cG9zdGdyZXM=
 stringData:
   SECRET_KEY: "azertyuiop^$*qsdfghjklmù<wxcvbn,;:!789456123"
   ALGORITHM: "HS256"
