--- a/kubernetes/airflow/my_airflow_values.yml
+++ b/kubernetes/airflow/my_airflow_values.yml
@@ -13,6 +13,20 @@ models:
     enabled: true
     existingClaim: models-pvc # PVC existant pour les modèles
 
+backup:
+  persistence:
+    enabled: true
+    existingClaim: my-db-backup
+
+extraVolumes:
+  - name: airflow-init-db
+    persistentVolumeClaim:
+      claimName: airflow-init-db
+
+extraVolumeMounts:
+  - name: airflow-init-db
+    mountPath: /docker-entrypoint-initdb.d # Répertoire où PostgreSQL cherche les scripts d'initialisation
+
 uid: 1000
 gid: 1000
 
