--- a/kubernetes/cronjob/my-api-postgres-backup.yml
+++ b/kubernetes/cronjob/my-api-postgres-backup.yml
@@ -4,7 +4,7 @@ metadata:
   name: my-api-postgres-backup
   namespace: airflow # Assurez-vous que le namespace est correct.
 spec:
-  schedule: "0 0 * * *" # Exécute tous les jours à minuit
+  schedule: "0 0 * * 1" # Exécute tous les lundis à minuit
   jobTemplate:
     spec:
       template:
@@ -14,16 +14,16 @@ spec:
               image: postgres:latest # Utilisez l'image officielle de PostgreSQL.
               env:
                 - name: POSTGRES_HOST
-                  value: "my-api-postgres"
+                  value: "airflow-postgresql-0"
                 - name: POSTGRES_DB
-                  value: "my-api-database"
+                  value: "reco_movies_db"
                 - name: POSTGRES_USER
-                  value: "antoine"
+                  value: "postgres"
                 - name: POSTGRES_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: my-api-postgres-secrets
-                      key: POSTGRES_PASSWORD
+                      name: sql-conn
+                      key: PASSWORD
               command:
                 - /bin/sh
                 - -c
