:hammer: Update streamlit, prometheus, fastapi

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.pkl
 ./kubernetes/airflow/logs/
 ./prometheus/logs/
-./data
+data/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
