--- a/kubernetes/configmaps/prometheus-configmaps.yml
+++ b/kubernetes/configmaps/prometheus-configmaps.yml
@@ -7,15 +7,24 @@ metadata:
 data:
   prometheus.yml: |
     global:
-      scrape_interval: '15s'
+      scrape_interval: 30s
+
     scrape_configs:
-      - job_name: "node_exporter"
-        static_configs:
-          - targets: ["node_exporter.api.svc.cluster.local:9100"]
-      - job_name: "fastapi"
-        static_configs:
-          - targets: ["fastapi.api.svc.cluster.local:8000"]
-      - job_name: "airflow"
-        static_configs:
-          - targets: ["airflow-statsd.airflow.svc.cluster.local:9102"]
-        metrics_path: "/metrics"
+      - job_name: 'kubernetes-pods'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+            action: keep
+            regex: true
+
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+            action: replace
+            target_label: __metrics_path__
+            regex: (.+)
+
+          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            target_label: __address__
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
