:construction: Update initial_data_load

--- a/kubernetes/secrets/mlflow-secrets.yaml
+++ b/kubernetes/secrets/mlflow-secrets.yaml
@@ -5,5 +5,4 @@ metadata:
   namespace: airflow
 type: Opaque
 stringData:
-  MLFLOW_USERNAME: "user"
-  MLFLOW_PASSWORD: "Nds70uprI3"
+  MLFLOW_TRACKING_PASSWORD: "c9A4Qcrrmi"
