--- a/.github/workflows/build_push_docker_images.yml
+++ b/.github/workflows/build_push_docker_images.yml
@@ -30,6 +30,10 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/projet_reco_movies:python-init-db-latest
 
+      - name: Test init_db image
+        run: |
+          docker run --rm ${{ secrets.DOCKER_USERNAME }}/projet_reco_movies:python-init-db-latest pytest tests/
+
       - name: Build and push Api image
         uses: docker/build-push-action@v2
         with:
