:hammer: Update tests

--- a/tests/requirements-test.txt
+++ b/tests/requirements-test.txt
@@ -1,37 +1,4 @@
 # Test framework
 pytest
-
-# Database testing
-psycopg2>=2.9.9
-
-# API testing
-fastapi
-httpx
-python-multipart
-
-# Data processing and ML dependencies
+unittest
 pandas
-numpy<2.0
-scikit-learn==1.5.1
-tqdm==4.66.5
-bcrypt==3.2.0
-
-# Test client for FastAPI
-requests
-passlib
-rapidfuzz
-python-jose[cryptography]
-pydantic>=2.7.0,<3.0.0
-kubernetes
-
-# Test client for Airflow
-apache-airflow
-beautifulsoup4==4.12.3
-python-dotenv==1.0.1
-scikit-surprise
-mlflow
-streamlit
-prometheus_client
-scipy
-lxml
-
