--- a/kubernetes/deployments/fastapi-deployment.yml
+++ b/kubernetes/deployments/fastapi-deployment.yml
@@ -52,17 +52,15 @@ spec:
               value: "false"
           ports:
             - containerPort: 8000
-          resources:
-            requests:
-              memory: "8192Mi"
-              cpu: "1"
-            limits:
-              memory: "8Gi"
-              cpu: "4"
           volumeMounts:
             - name: models-storage-pvc
               mountPath: /models
+            - name: raw-storage-pvc
+              mountPath: /data
       volumes:
         - name: models-storage-pvc
           persistentVolumeClaim:
             claimName: models-storage-pvc
+        - name: raw-storage-pvc
+          persistentVolumeClaim:
+            claimName: raw-storage-pvc
