--- a/kubernetes/secrets/mlflow-secrets.yaml
+++ b/kubernetes/secrets/mlflow-secrets.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: airflow
 type: Opaque
 stringData:
-  MLFLOW_TRACKING_PASSWORD: "c9A4Qcrrmi"
+  MLFLOW_TRACKING_PASSWORD: "reco_movies"
