--- a/kubernetes/prometheus/values.yaml
+++ b/kubernetes/prometheus/values.yaml
@@ -1,11 +1,18 @@
-scrape_configs:
-  - job_name: 'api-services'
-    kubernetes_sd_configs:
-      - role: endpoints
-        namespaces:
-          names:
-            - api
-    relabel_configs:
-      - source_labels: [__meta_kubernetes_service_name]
-        action: keep
-        regex: fastapi|streamlit  # Remplacez par les noms de vos services
+prometheus:
+  prometheusSpec:
+    serviceMonitorSelector: {}
+    podMonitorSelector: {}
+    additionalScrapeConfigs:
+      - job_name: 'fastapi'
+        kubernetes_sd_configs:
+          - role: service
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_namespace]
+            action: keep
+            regex: api
+          - source_labels: [__meta_kubernetes_service_name]
+            action: keep
+            regex: 'fastapi'
+          - source_labels: [__meta_kubernetes_service_port]
+            action: keep
+            regex: '80'
