👷 Update Mlflow deployment

--- a/kubernetes/ml_flow/values.yaml
+++ b/kubernetes/ml_flow/values.yaml
@@ -13,3 +13,12 @@ metrics:
     serviceMonitor:
         enabled: true
 
+# values.yaml
+
+mlflow:
+    tracking:
+        admin:
+            username: "admin-user"  # Nom du secret
+            password: "admin-password"  # Nom du secret
+
+
