--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 kubernetes/airflow/logs/
 ./prometheus/logs/
 data/
+./old_models/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
