--- a/kubernetes/secrets/mlflow-secrets.yaml
+++ b/kubernetes/secrets/mlflow-secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mlflow-secrets
-  namespace: airflow
+  name: mlf-ts-mlflow-tracking
 type: Opaque
-stringData:
-  MLFLOW_TRACKING_PASSWORD: "reco_movies"
+data:
+  admin-user: {{ .Values.mlflow.tracking.admin.username | b64enc | quote }}
+  admin-password: {{ .Values.mlflow.tracking.admin.password | b64enc | quote }}
