--- a/kubernetes/secrets/airflow-secrets.yaml
+++ b/kubernetes/secrets/airflow-secrets.yaml
@@ -9,6 +9,6 @@ data:
   POSTGRES_PASSWORD: cG9zdGdyZXM=
 stringData:
   # Encode fait automatiquement par kubectl
-  TMDB_TOKEN: "eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjZWY5MGUyOWMzZGQ0ZTg0Y2IzMjdhMWRiMzlhNWY1MSIsIm5iZiI6MTczMjE4NzczOC4yNjA2MzI1LCJzdWIiOiI2NzI3Y2MwNTU5MTgxMzdjZmMzOTljMmQiLCJzY29wZXMiOlsiYXBpX3JlYWQiXSwidmVyc2lvbiI6MX0.H_FWgtnGj4TWlMqKioiegIzvFazc8fmvMXOqHzunwqY"
+  TMDB_API_TOKEN: "eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjZWY5MGUyOWMzZGQ0ZTg0Y2IzMjdhMWRiMzlhNWY1MSIsIm5iZiI6MTczMjE4NzczOC4yNjA2MzI1LCJzdWIiOiI2NzI3Y2MwNTU5MTgxMzdjZmMzOTljMmQiLCJzY29wZXMiOlsiYXBpX3JlYWQiXSwidmVyc2lvbiI6MX0.H_FWgtnGj4TWlMqKioiegIzvFazc8fmvMXOqHzunwqY"
   SECRET_KEY: "azertyuiop^$*qsdfghjklmù<wxcvbn,;:!789456123"
   ALGORITHM: "HS256"
