--- a/kubernetes/deployments/fastapi-deployment.yml
+++ b/kubernetes/deployments/fastapi-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fastapi
-  namespace: api
+  namespace: airflow
 spec:
   replicas: 2
   selector:
@@ -28,34 +28,25 @@ spec:
               value: "postgres"
             - name: POSTGRES_USER # Nom d'utilisateur pour PostgreSQL.
               value: "postgres"
-            - name: MLFLOW_TRACKING_URI
-              value: "http://mlflow.airflow.svc.cluster.local:5000"
-            - name: MLFLOW_TRACKING_USERNAME
-              value: "user"
-            - name: MLFLOW_TRACKING_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mlf-ts-mlflow-tracking
-                  key: "admin-password"
             - name: POSTGRES_PASSWORD # Mot de passe pour l'utilisateur.
               valueFrom:
                 secretKeyRef:
-                  name: api-secrets
+                  name: sql-conn
                   key: POSTGRES_PASSWORD
             - name: SECRET_KEY
               valueFrom:
                 secretKeyRef:
-                  name: api-secrets
+                  name: sql-conn
                   key: SECRET_KEY
             - name: ALGORITHM
               valueFrom:
                 secretKeyRef:
-                  name: api-secrets
+                  name: sql-conn
                   key: ALGORITHM
             - name: TMDB_API_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: api-secrets
+                  name: sql-conn
                   key: TMDB_API_TOKEN
             - name: UVICORN_RELOAD
               value: "false"
