--- a/kubernetes/prometheus/prometheus.yaml
+++ b/kubernetes/prometheus/prometheus.yaml
@@ -1,31 +1,19 @@
-rbac:
-  create: true
-  additionalClusterRoleBindings:
-    - name: prometheus-airflow
-      roleRef:
-        apiGroup: rbac.authorization.k8s.io
-        kind: ClusterRole
-        name: prometheus-airflow
-      subjects:
-        - kind: ServiceAccount
-          name: prometheus-kube-prometheus-prometheus
-          namespace: monitoring
-
-  additionalClusterRoles:
-    - name: prometheus-airflow
-      rules:
-        - apiGroups: [""]
-          resources: ["services", "endpoints", "pods"]
-          verbs: ["get", "list", "watch"]
-
-  additionalServiceMonitors:
-    - name: airflow-statsd-monitor
-      namespaceSelector:
-        matchNames:
-          - airflow
-      selector:
-        matchLabels:
-          app: airflow-statsd
-      endpoints:
-        - port: metrics # Doit correspondre au nom du port dans le service airflow-statsd
-          interval: 15s
+- job_name: "airflow-training-metrics"
+  kubernetes_sd_configs:
+    - role: pod
+      namespaces:
+        names: [airflow]
+  relabel_configs:
+    - source_labels: [__meta_kubernetes_pod_label_prometheus_io_scrape]
+      action: keep
+      regex: true
+    - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+      action: replace
+      target_label: __metrics_path__
+      regex: (.+)
+    - source_labels:
+        [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+      action: replace
+      regex: ([^:]+)(?::\d+)?;(\d+)
+      replacement: $1:$2
+      target_label: __address__
