--- a/kubernetes/services/api-service.yml
+++ b/kubernetes/services/api-service.yml
@@ -1,15 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: fastapi
-  namespace: airflow
-spec:
-  selector:
-    app: fastapi
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
 
 ---
 apiVersion: v1
@@ -23,7 +11,7 @@ spec:
   ports:
     - protocol: TCP
       port: 8501 # Port par défaut pour Streamlit
-      targetPort: 8501 # Assurez-vous que c'est le bon port cible
+      targetPort: 8501
       nodePort: 30007 # Port NodePort spécifique (facultatif)
-  type: NodePort
+  type: ClusterIP
 
